[package]
name = "elma2"
version = "0.1.0"
authors = ["kryptan"]
edition = "2018"

[dependencies]
elma = "0.1"
elma-lgr = "0.2"
glutin = "0.24"
cgmath = "0.12"
lyon_tessellation = "0.3"
lyon_core = "0.3.2"
lyon_path_iterator = "0.3.2"
lyon_path = "0.3.2"
lyon_path_builder = "0.3.2"

[build-dependencies]
gl_generator = "0.14"
